--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5kT+EJhRKZ3IqVRbGlhvk",
+      "authorship_tag": "ABX9TyNOki3gyb1q/HDAmvURj2kD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2588,7 +2588,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2596,6 +2596,63 @@
           "text": [
             "[2, 3]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s='hello'\n",
+        "def string_score(s):\n",
+        "  score = 0\n",
+        "  for i in range(len(s)-1):\n",
+        "    score += abs(ord(s[i]) - ord(s[i+1]))\n",
+        "  return score\n",
+        "\n",
+        "\n",
+        "print(string_score(s))\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "1RCEbHzO6iRP",
+        "outputId": "9cea8f62-2e7b-489c-b388-879b19a563ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xDjO5v827NBr",
+        "outputId": "b3ba80ff-8e52-4e72-c4df-05163ba925df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
