--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOki3gyb1q/HDAmvURj2kD",
+      "authorship_tag": "ABX9TyP6rLjM+GcagD7ULlTo2/9e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2611,8 +2611,7 @@
         "\n",
         "\n",
         "print(string_score(s))\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "1RCEbHzO6iRP",
@@ -2621,7 +2620,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2634,25 +2633,83 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "word ='leetcode'\n",
+        "def substring(word):\n",
+        "  reverse=word[::-1]\n",
+        "  for i in range(1,len(word)):\n",
+        "    if word[i-1] +word[i] in reverse:\n",
+        "      return True\n",
+        "  return False\n",
+        "substring(word)"
+      ],
       "metadata": {
         "id": "xDjO5v827NBr",
-        "outputId": "b3ba80ff-8e52-4e72-c4df-05163ba925df",
+        "outputId": "9248c18b-0723-4cbf-9e80-8ad9419a9d40",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "True"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Second largest element"
+      ],
+      "metadata": {
+        "id": "OSvQCLHaS8jf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "arr = map(int, input().split())  #2 3 6 6 5\n",
+        "def second_largest(arr):\n",
+        "   new = sorted(set(arr))\n",
+        "   return new[-2]\n",
+        "\n",
+        "second_largest(arr)\n"
+      ],
+      "metadata": {
+        "id": "J-GPsnCHQkqj",
+        "outputId": "8065a213-b72d-4f2a-8c62-96db25bcd1f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "2 3 6 8 9 7 8\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ]
     }
