--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6rLjM+GcagD7ULlTo2/9e",
+      "authorship_tag": "ABX9TyMxjJcC950HPm9cMlLhWURj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2650,7 +2650,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2691,7 +2691,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2710,6 +2710,126 @@
           },
           "metadata": {},
           "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " In this challenge, the user enters a string and a substring. You have to print the number of times that the substring occurs in the given string. String traversal will take place from left to right, not from right to left\n",
+        "\n",
+        " ABCDCDC\n",
+        "\n",
+        "CDC  ---2\n"
+      ],
+      "metadata": {
+        "id": "HtZbI1wzNoB0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_substring(string, sub_string):\n",
+        "    count = 0\n",
+        "    for i in range(len(string) - len(sub_string) + 1):\n",
+        "        if string[i:].startswith(sub_string):\n",
+        "            count += 1\n",
+        "    return count\n",
+        "\n",
+        "string = 'ABCDCDC'\n",
+        "sub_string = \"CDC\"\n",
+        "count_substring(string, sub_string)"
+      ],
+      "metadata": {
+        "id": "3h9CtMHwLb-g",
+        "outputId": "7857c959-ede6-472a-cd74-7a5a1e8b92ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "l1=input().split()\n",
+        "\n",
+        "l2=input().split()\n",
+        "for x in l1:\n",
+        "  for y in l2:\n",
+        "    print((int(x),int(y)),end=\" \")"
+      ],
+      "metadata": {
+        "id": "bMIODHhgTnut",
+        "outputId": "ca9600af-9207-4822-cfcc-353f602c6d7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 3 4\n",
+            "4 3 1\n",
+            "(1, 4) (1, 3) (1, 1) (3, 4) (3, 3) (3, 1) (4, 4) (4, 3) (4, 1) "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1=input().split()\n",
+        "def new_(x):\n",
+        "  x= '-'.join(l1)\n",
+        "  return x\n",
+        "new_(x)"
+      ],
+      "metadata": {
+        "id": "y479JRs9ZJmW",
+        "outputId": "2478e6e6-d04b-4901-de4c-008ee0f10bd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "this is a string   \n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'this-is-a-string'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
         }
       ]
     }
