--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxjJcC950HPm9cMlLhWURj",
+      "authorship_tag": "ABX9TyOrD4o2qE1mMT+mybmhVRBD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2747,7 +2747,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2779,7 +2779,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2809,7 +2809,7 @@
           "height": 53
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2830,6 +2830,48 @@
           },
           "metadata": {},
           "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Maximum Number of Words Found in Sentences"
+      ],
+      "metadata": {
+        "id": "DZ3REPb83tFE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentences = [\"alice and bob love leetcode\", \"i think so too\", \"this is great thanks very much\"]\n",
+        "\n",
+        "def highest():\n",
+        "    max_length = 0\n",
+        "    for word in sentences:\n",
+        "        length = len(word.split())\n",
+        "        max_length = max(max_length, length)\n",
+        "    return max_length\n",
+        "\n",
+        "result = highest()\n",
+        "print(\"Length of the longest sentence:\", result)\n"
+      ],
+      "metadata": {
+        "id": "0yIIkYj_03dQ",
+        "outputId": "2eb951c6-27be-48ea-84df-c6caf2af0f1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Length of the longest sentence: 6\n"
+          ]
         }
       ]
     }
