--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrD4o2qE1mMT+mybmhVRBD",
+      "authorship_tag": "ABX9TyO/NUI2HhEb7d1I+v7sapeq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iwtj2aTYHEai",
-        "outputId": "9e61f6f4-5b84-4168-c33e-753451d2b4d2"
+        "outputId": "c2bf2a8c-4ed2-4a0c-d6d3-d101850bafd5"
       },
       "outputs": [
         {
@@ -52,10 +52,10 @@
           "name": "stdout",
           "text": [
             "Enter the Base of Triangle\n",
-            "15\n",
+            "6\n",
             "Enter the Height of Triangle\n",
-            "12\n",
-            "The Area of Triangle of Base 15  And Height 12 is : -->90.0\n"
+            "9\n",
+            "The Area of Triangle of Base 6  And Height 9 is : -->27.0\n"
           ]
         }
       ],
@@ -97,17 +97,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "coHMpH2hQZif",
-        "outputId": "e9714f42-3969-40f8-df95-b50ea7000657"
+        "outputId": "d345dfaf-3b3b-4f05-942f-1e29e724bfe7"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter the radius14\n",
-            "perimeter of circle of radius 14.0 is :-->87.96459430051421\n",
-            "Area of circle is ----->615.7521601035994\n"
+            "enter the radius8.9\n",
+            "perimeter of circle of radius 8.9 is :-->55.92034923389832\n",
+            "Area of circle of radius 8.9 is ----->248.84555409084754\n"
           ]
         }
       ]
@@ -139,20 +139,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OTPNm-GnJG3y",
-        "outputId": "4cb286c5-9f02-4eb8-ddc4-8005195ee24a"
+        "outputId": "00396186-c7bf-4533-f932-9e267a954abf"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter first number\n",
-            "1\n",
+            "50\n",
             "enter second number\n",
-            "100\n",
-            "original value of A is 1 and b is 100\n",
-            "after swapping value of A is 100 and b is 1\n"
+            "80\n",
+            "original value of A is 50 and b is 80\n",
+            "after swapping value of A is 80 and b is 50\n"
           ]
         }
       ]
@@ -181,20 +181,20 @@
       ],
       "metadata": {
         "id": "txtjadU-jm2P",
-        "outputId": "66a54808-85ec-46a7-8378-04e45a8d64c8",
+        "outputId": "b8f8068a-ef05-4aba-cdfb-af26e93626a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter the year \n",
-            "1567\n",
-            "1567 is not a leap year\n"
+            "512\n",
+            "512 is a leap year\n"
           ]
         }
       ]
@@ -264,25 +264,25 @@
         "  print(\"factorial of number {} does not exist as the number is negative\".format(num))\n",
         "else:\n",
         "  for i in range(1,num+1):\n",
-        "    factorial = factorial *i\n",
+        "    factorial = factorial * i\n",
         "  print(\"factorial of number {} is {}\".format(num,factorial))"
       ],
       "metadata": {
         "id": "k2BDhSk27pFu",
-        "outputId": "8adb8689-02b4-4b7b-9c2b-e4d32f1aa291",
+        "outputId": "53900b6c-8990-4443-cb26-e0c09f01dbb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter the number \n",
-            "5\n",
-            "factorial of number 5 is 120\n"
+            "0\n",
+            "factorial of number 0 is 1\n"
           ]
         }
       ]
@@ -1190,20 +1190,20 @@
       ],
       "metadata": {
         "id": "zawEBKOTWFeQ",
-        "outputId": "656e4736-4e98-4871-fe41-80a721d10589",
+        "outputId": "62e9a8ad-98ed-4837-bd6e-ca492ba7900b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter the number \n",
-            "47\n",
-            "Its prime\n"
+            "531\n",
+            "Its not prime\n"
           ]
         }
       ]
@@ -2859,18 +2859,56 @@
       ],
       "metadata": {
         "id": "0yIIkYj_03dQ",
-        "outputId": "2eb951c6-27be-48ea-84df-c6caf2af0f1e",
+        "outputId": "8871d488-a6bb-4872-84ea-433e32467cfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Length of the longest sentence: 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def string_to_numbers(input_str):\n",
+        "    result = \"\"\n",
+        "    for char in input_str:\n",
+        "        if char.isalpha():\n",
+        "            # Convert uppercase and lowercase letters to their numeric positions\n",
+        "            num = ord(char.lower()) - ord('a') + 1\n",
+        "            result += str(num)\n",
+        "        else:\n",
+        "            # For non-alphabetic characters, just append them to the result\n",
+        "            result += char\n",
+        "    return result\n",
+        "\n",
+        "# Test the function with the input \"happy\"\n",
+        "input_str = \"happy\"\n",
+        "output = string_to_numbers(input_str)\n",
+        "print(output)  # Output: 81161625\n"
+      ],
+      "metadata": {
+        "id": "bfl4bfUaVlMp",
+        "outputId": "4823a929-61b3-4b5a-df23-80d2c7fbfee4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "81161625\n"
           ]
         }
       ]
