--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/NUI2HhEb7d1I+v7sapeq",
+      "authorship_tag": "ABX9TyPDXOICpF4usM/MRFQjaE7d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -99,7 +99,7 @@
         "id": "coHMpH2hQZif",
         "outputId": "d345dfaf-3b3b-4f05-942f-1e29e724bfe7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "id": "OTPNm-GnJG3y",
         "outputId": "00396186-c7bf-4533-f932-9e267a954abf"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,12 +559,12 @@
       ],
       "metadata": {
         "id": "52cQY1eMXY6w",
-        "outputId": "c403b933-00d7-4b80-8a6a-fd94a38bd709",
+        "outputId": "19f062a5-1185-40fa-9a42-73b4d29918e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,10 +573,10 @@
             "enter the first  number \n",
             "12\n",
             "enter the second  number \n",
-            "65\n",
+            "35\n",
             "enter the Third  number \n",
-            "12\n",
-            "These 3 side 12,65,12 cant form a triangle\n"
+            "45\n",
+            "These 3 side 12,35,45 can form a triangle\n"
           ]
         }
       ]
@@ -1040,6 +1040,34 @@
     {
       "cell_type": "code",
       "source": [
+        "my_array = ['ankit' ,'amit' ,'sumt' ,'Abcdes']\n",
+        "\n",
+        "def largest_num():\n",
+        "  for num in my_array:\n",
+        "    return max(my_array ,key=len)\n",
+        "print(largest_num())"
+      ],
+      "metadata": {
+        "id": "13TxxgjcQlHl",
+        "outputId": "de96bdd2-c078-4f66-bbfd-f3005bbb0357",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Abcdes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "my_array = [10, 20, 30, 99]\n",
         "largest_ = my_array[0]\n",
         "def largest_number():\n",
@@ -1195,7 +1223,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2859,17 +2887,20 @@
       ],
       "metadata": {
         "id": "0yIIkYj_03dQ",
-        "outputId": "8871d488-a6bb-4872-84ea-433e32467cfe",
+        "outputId": "460d2a3e-fe39-499f-c3c0-0cb9a4cc383c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "5\n",
+            "4\n",
+            "6\n",
             "Length of the longest sentence: 6\n"
           ]
         }
@@ -2902,7 +2933,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
