--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDXOICpF4usM/MRFQjaE7d",
+      "authorship_tag": "ABX9TyMaer8X9aig3CScA8wwGW44",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,7 +1054,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2892,7 +2892,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2941,6 +2941,66 @@
           "text": [
             "81161625\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('abcde'.isalpha())\n",
+        "print('ab11cde'.isalpha())\n",
+        "print('12345'.isdigit())\n",
+        "print('abcd123'.isalnum())\n"
+      ],
+      "metadata": {
+        "id": "fBxRuyBTSSUK",
+        "outputId": "876ccdc4-a0d9-4dc9-8748-29aa1b77b928",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import textwrap\n",
+        "new = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+        "fill = textwrap.fill(new,5)\n",
+        "wrap = textwrap.wrap(new,5)\n",
+        "fill,wrap"
+      ],
+      "metadata": {
+        "id": "GITVpNx2SwBc",
+        "outputId": "dbaed6df-0e58-4774-91fb-b9ea807753b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('ABCDE\\nFGHIJ\\nKLMNO\\nPQRST\\nUVWXY\\nZ',\n",
+              " ['ABCDE', 'FGHIJ', 'KLMNO', 'PQRST', 'UVWXY', 'Z'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     }
