--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaer8X9aig3CScA8wwGW44",
+      "authorship_tag": "ABX9TyNuMiLkzDm+edqGyMEFNzJP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2742,6 +2742,176 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "l1=input().split()\n",
+        "\n",
+        "l2=input().split()\n",
+        "for x in l1:\n",
+        "  for y in l2:\n",
+        "    print((int(x),int(y)),end=\" \")"
+      ],
+      "metadata": {
+        "id": "bMIODHhgTnut",
+        "outputId": "ca9600af-9207-4822-cfcc-353f602c6d7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 3 4\n",
+            "4 3 1\n",
+            "(1, 4) (1, 3) (1, 1) (3, 4) (3, 3) (3, 1) (4, 4) (4, 3) (4, 1) "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l1=input().split()\n",
+        "def new_(word):\n",
+        "  x= '$ '.join(l1)\n",
+        "  return x\n",
+        "new_(word)"
+      ],
+      "metadata": {
+        "id": "y479JRs9ZJmW",
+        "outputId": "962d47e1-3042-46bc-ea3a-cf459cc172d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "My name is ankit\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'My$ name$ is$ ankit'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_str = \"happy\"\n",
+        "def string_to_numbers(input_str):\n",
+        "    result = \"\"\n",
+        "    for char in input_str:\n",
+        "        if char.isalpha():\n",
+        "            # Convert uppercase and lowercase letters to their numeric positions\n",
+        "            num = ord(char.lower()) - ord('a') + 1\n",
+        "            result += str(num)\n",
+        "        else:\n",
+        "            # For non-alphabetic characters, just append them to the result\n",
+        "            result += char\n",
+        "    return result\n",
+        "\n",
+        "\n",
+        "output = string_to_numbers(input_str)\n",
+        "print(output)  # Output: 81161625\n"
+      ],
+      "metadata": {
+        "id": "bfl4bfUaVlMp",
+        "outputId": "4823a929-61b3-4b5a-df23-80d2c7fbfee4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "81161625\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('abcde'.isalpha())\n",
+        "print('ab11cde'.isalpha())\n",
+        "print('12345'.isdigit())\n",
+        "print('abcd123'.isalnum())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fBxRuyBTSSUK",
+        "outputId": "876ccdc4-a0d9-4dc9-8748-29aa1b77b928"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import textwrap\n",
+        "new = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+        "fill = textwrap.fill(new,5)\n",
+        "wrap = textwrap.wrap(new,5)\n",
+        "fill,wrap"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GITVpNx2SwBc",
+        "outputId": "dbaed6df-0e58-4774-91fb-b9ea807753b4"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('ABCDE\\nFGHIJ\\nKLMNO\\nPQRST\\nUVWXY\\nZ',\n",
+              " ['ABCDE', 'FGHIJ', 'KLMNO', 'PQRST', 'UVWXY', 'Z'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         " In this challenge, the user enters a string and a substring. You have to print the number of times that the substring occurs in the given string. String traversal will take place from left to right, not from right to left\n",
@@ -2790,78 +2960,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "l1=input().split()\n",
-        "\n",
-        "l2=input().split()\n",
-        "for x in l1:\n",
-        "  for y in l2:\n",
-        "    print((int(x),int(y)),end=\" \")"
-      ],
-      "metadata": {
-        "id": "bMIODHhgTnut",
-        "outputId": "ca9600af-9207-4822-cfcc-353f602c6d7e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 3 4\n",
-            "4 3 1\n",
-            "(1, 4) (1, 3) (1, 1) (3, 4) (3, 3) (3, 1) (4, 4) (4, 3) (4, 1) "
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "l1=input().split()\n",
-        "def new_(x):\n",
-        "  x= '-'.join(l1)\n",
-        "  return x\n",
-        "new_(x)"
-      ],
-      "metadata": {
-        "id": "y479JRs9ZJmW",
-        "outputId": "2478e6e6-d04b-4901-de4c-008ee0f10bd9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "this is a string   \n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'this-is-a-string'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Maximum Number of Words Found in Sentences"
@@ -2903,104 +3001,6 @@
             "6\n",
             "Length of the longest sentence: 6\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def string_to_numbers(input_str):\n",
-        "    result = \"\"\n",
-        "    for char in input_str:\n",
-        "        if char.isalpha():\n",
-        "            # Convert uppercase and lowercase letters to their numeric positions\n",
-        "            num = ord(char.lower()) - ord('a') + 1\n",
-        "            result += str(num)\n",
-        "        else:\n",
-        "            # For non-alphabetic characters, just append them to the result\n",
-        "            result += char\n",
-        "    return result\n",
-        "\n",
-        "# Test the function with the input \"happy\"\n",
-        "input_str = \"happy\"\n",
-        "output = string_to_numbers(input_str)\n",
-        "print(output)  # Output: 81161625\n"
-      ],
-      "metadata": {
-        "id": "bfl4bfUaVlMp",
-        "outputId": "4823a929-61b3-4b5a-df23-80d2c7fbfee4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "81161625\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print('abcde'.isalpha())\n",
-        "print('ab11cde'.isalpha())\n",
-        "print('12345'.isdigit())\n",
-        "print('abcd123'.isalnum())\n"
-      ],
-      "metadata": {
-        "id": "fBxRuyBTSSUK",
-        "outputId": "876ccdc4-a0d9-4dc9-8748-29aa1b77b928",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n",
-            "False\n",
-            "True\n",
-            "True\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import textwrap\n",
-        "new = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
-        "fill = textwrap.fill(new,5)\n",
-        "wrap = textwrap.wrap(new,5)\n",
-        "fill,wrap"
-      ],
-      "metadata": {
-        "id": "GITVpNx2SwBc",
-        "outputId": "dbaed6df-0e58-4774-91fb-b9ea807753b4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "('ABCDE\\nFGHIJ\\nKLMNO\\nPQRST\\nUVWXY\\nZ',\n",
-              " ['ABCDE', 'FGHIJ', 'KLMNO', 'PQRST', 'UVWXY', 'Z'])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
         }
       ]
     }
