--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuMiLkzDm+edqGyMEFNzJP",
+      "authorship_tag": "ABX9TyP/ShhGwQzhZ0RAVPp03+q3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2789,7 +2789,7 @@
           "height": 53
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2866,7 +2866,7 @@
         "id": "fBxRuyBTSSUK",
         "outputId": "876ccdc4-a0d9-4dc9-8748-29aa1b77b928"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2896,7 +2896,7 @@
         "id": "GITVpNx2SwBc",
         "outputId": "dbaed6df-0e58-4774-91fb-b9ea807753b4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3000,6 +3000,131 @@
             "4\n",
             "6\n",
             "Length of the longest sentence: 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string\n",
+        "def contains_all_alphabets(test_string):\n",
+        "    alphabet = set(string.ascii_lowercase)\n",
+        "\n",
+        "    return set(test_string.lower()) >= alphabet   #>= is use for set comparison\n",
+        "\n",
+        "test_string = input()\n",
+        "print(contains_all_alphabets(test_string))"
+      ],
+      "metadata": {
+        "id": "sN6FZe-FU3xL",
+        "outputId": "74f412e0-0d95-4d78-81d7-0ba5032893a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The quick brown fox jumps over the lazy dog\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string\n",
+        "\n",
+        "input_string = input()\n",
+        "all = set(string.ascii_lowercase)\n",
+        "\n",
+        "if set(input_string) >= all:\n",
+        "    print(True)\n",
+        "else:\n",
+        "    print(False)\n"
+      ],
+      "metadata": {
+        "id": "UmbV-nyWWwIZ",
+        "outputId": "cfa11461-5797-4bf7-9448-87beb2e27718",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "nkjgdd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new=input()\n",
+        "if isinstance(new,int):\n",
+        "  print ('The string is  an integer')\n",
+        "else:\n",
+        "  print('The string is not an integer')"
+      ],
+      "metadata": {
+        "id": "-_5Yx6kdYa_s",
+        "outputId": "eef2e282-1a9d-4c2d-d282-e09b16ded0a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1234\n",
+            "The string is not an integer\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word= input()\n",
+        "letter=0\n",
+        "digit=0\n",
+        "symbol=0\n",
+        "for i in word:\n",
+        "  if i.isalpha():\n",
+        "    letter +=1\n",
+        "  elif i.isnumeric():\n",
+        "    digit+=1\n",
+        "  else:\n",
+        "    symbol+=1\n",
+        "print(f'Letters {letter} Digits {digit}')"
+      ],
+      "metadata": {
+        "id": "M70KxkqWb88p",
+        "outputId": "598027ab-238b-48c6-bcca-6a9ed79d7ddb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "program@2022\n",
+            "Letters 7 Digits 4\n"
           ]
         }
       ]
