--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/ShhGwQzhZ0RAVPp03+q3",
+      "authorship_tag": "ABX9TyMDdDlblVdIODkhOBFAOcsm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3023,7 +3023,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3055,7 +3055,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -3082,7 +3082,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3117,7 +3117,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3128,6 +3128,104 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_positive_sales(sales):\n",
+        "    positive_sales_count = 0\n",
+        "    for sale in sales:\n",
+        "        if sale > 0:\n",
+        "            positive_sales_count += 1\n",
+        "\n",
+        "    return positive_sales_count\n",
+        "\n",
+        "# Input data\n",
+        "days = int(input(\"Enter the number of days: \"))\n",
+        "sales = []\n",
+        "\n",
+        "for i in range(days):\n",
+        "    sale = int(input( ) )\n",
+        "    sales.append(sale)\n",
+        "\n",
+        "# Output\n",
+        "print(\"Number of positive sales:\", count_positive_sales(sales))"
+      ],
+      "metadata": {
+        "id": "OI6PkZWpoU0-",
+        "outputId": "4e766ce7-456e-44ff-e504-6155a26de794",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of days: 2\n",
+            "-2\n",
+            "-3\n",
+            "Number of positive sales: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sales = list(map(int, input(\"Enter sales for each day separated by spaces: \").split()))\n"
+      ],
+      "metadata": {
+        "id": "63Q6eGrgqZ5y",
+        "outputId": "8767daae-fdd6-442f-e2c5-c4f0a2a81a1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter sales for each day separated by spaces: -12 43 -65 78 54 -12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(sales)"
+      ],
+      "metadata": {
+        "id": "ElJYSNtTqetn",
+        "outputId": "b45b0597-4c84-4150-e737-a8ffd6f98839",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-12, 43, -65, 78, 54, -12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "S4chZmZGry3i"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
