--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDdDlblVdIODkhOBFAOcsm",
+      "authorship_tag": "ABX9TyOv9fUoQVIQ/USoQFF3Zv3d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3158,7 +3158,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3184,7 +3184,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -3207,7 +3207,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3219,13 +3219,294 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# **Pandas **"
+      ],
       "metadata": {
-        "id": "S4chZmZGry3i"
+        "id": "tivbFNmN6lGG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Sample data\n",
+        "data = {\n",
+        "    'Student_ID': [1, 2, 3, 4, 5],\n",
+        "    'Name': ['Alice', 'Bob', 'Charlie', 'Diana', 'Eric'],\n",
+        "    'Age': [20, 22, 21, 20, 23],\n",
+        "    'Gender': ['F', 'M', 'M', 'F', 'M'],\n",
+        "    'Score': [85, 76, 90, 82, 78]\n",
+        "}\n",
+        "\n",
+        "# Create DataFrame\n",
+        "student_data = pd.DataFrame(data)\n",
+        "\n",
+        "print(student_data)\n"
+      ],
+      "metadata": {
+        "id": "S4chZmZGry3i",
+        "outputId": "6a1fe996-814a-4165-f3fa-218823a920d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Student_ID     Name  Age Gender  Score\n",
+            "0           1    Alice   20      F     85\n",
+            "1           2      Bob   22      M     76\n",
+            "2           3  Charlie   21      M     90\n",
+            "3           4    Diana   20      F     82\n",
+            "4           5     Eric   23      M     78\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The number of male and female students.\n",
+        "# The average score of male and female students\n",
+        "\n",
+        "student_data['Gender'].value_counts()\n",
+        "student_data.groupby('Gender')['Score'].mean()\n"
+      ],
+      "metadata": {
+        "id": "XTLVvbKExRbm",
+        "outputId": "62152c8a-f757-4093-e413-5bd65c610900",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Gender\n",
+              "F    83.500000\n",
+              "M    81.333333\n",
+              "Name: Score, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Sample data\n",
+        "data = {\n",
+        "    'Employee_ID': [1, 2, 3, 4, 5],\n",
+        "    'Name': ['Alice', 'Bob', 'Charlie', 'Diana', 'Eric'],\n",
+        "    'Department': ['HR', 'IT', 'HR', 'IT', 'Finance'],\n",
+        "    'Salary': [50000, 60000, 55000, 62000, 70000]\n",
+        "}\n",
+        "\n",
+        "# Create DataFrame\n",
+        "employee_data = pd.DataFrame(data)\n",
+        "\n",
+        "print(employee_data)\n"
+      ],
+      "metadata": {
+        "id": "YHm5HSdSyvj1",
+        "outputId": "9bcd167e-d15c-48f3-a440-259393150984",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Employee_ID     Name Department  Salary\n",
+            "0            1    Alice         HR   50000\n",
+            "1            2      Bob         IT   60000\n",
+            "2            3  Charlie         HR   55000\n",
+            "3            4    Diana         IT   62000\n",
+            "4            5     Eric    Finance   70000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The total salary expenditure for each department.\n"
+      ],
+      "metadata": {
+        "id": "OUXw2y2Yy42X",
+        "outputId": "340cd3df-744d-40b3-d17b-99d0578c03d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Department\n",
+              "Finance     70000\n",
+              "HR         105000\n",
+              "IT         122000\n",
+              "Name: Salary, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The department with the highest average salary.\n",
+        "employee_data.groupby('Department')['Salary'].mean().idxmax()"
+      ],
+      "metadata": {
+        "id": "pZpJEML-zI_K",
+        "outputId": "4d01bb35-737b-4a03-c13d-3c76e62b4ec6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Finance'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Sample data\n",
+        "data = {\n",
+        "    'Product_ID': [1, 2, 3, 4, 5],\n",
+        "    'Category': ['A', 'B', 'A', 'C', 'B'],\n",
+        "    'Price': [10, 20, 15, 25, 18],\n",
+        "    'Units_Sold': [100, 150, 120, 80, 200]\n",
+        "}\n",
+        "\n",
+        "# Create DataFrame\n",
+        "product_data = pd.DataFrame(data)\n",
+        "\n",
+        "print(product_data)\n"
+      ],
+      "metadata": {
+        "id": "qsncF5NR1quL",
+        "outputId": "c53e654f-c544-4797-96fa-4f3f8c599419",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Product_ID Category  Price  Units_Sold\n",
+            "0           1        A     10         100\n",
+            "1           2        B     20         150\n",
+            "2           3        A     15         120\n",
+            "3           4        C     25          80\n",
+            "4           5        B     18         200\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The total revenue generated by each category (Revenue = Price * Units_Sold).\n",
+        "product_data['Revenue'] = product_data['Price']*product_data['Units_Sold']\n",
+        "product_data.groupby('Category')['Revenue'].sum()"
+      ],
+      "metadata": {
+        "id": "oKGWKb_Z1xAy",
+        "outputId": "bf164751-fe39-4b1f-8191-d044a53da694",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Category\n",
+              "A    2800\n",
+              "B    6600\n",
+              "C    2000\n",
+              "Name: Revenue, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The category with the highest total revenue.\n",
+        "product_data.groupby('Category')['Revenue'].max().idxmax()"
+      ],
+      "metadata": {
+        "id": "3PKmM5gt3u3L",
+        "outputId": "bf27b8b7-c12a-4343-c5de-6da3b7811ad5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'B'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     }
   ]
 }
